--- a/test/fixtures/secret_lines.yml
+++ b/test/fixtures/secret_lines.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  secret_text: 
+  secret_text: MyText
   user: one
 
 two:
-  secret_text: 
+  secret_text: MyText
   user: two
